--- a/flexbox.less
+++ b/flexbox.less
@@ -1,5 +1,5 @@
 /*
-Uses flexbox mixin from https://github.com/ProLoser/Flexbox.less
+Uses flexbox-mixins.less - make sure to @import it too - before including this file!
 
 @usage
 //EXAMPLE 1 - row / horizontal
